--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -14,6 +14,8 @@
     --offWhiteSplashBackgroundBanner: rgba(248, 248, 248, 0.74);
     --blueLinkOnHover: rgba(5, 34, 77, 1.0);
     --darkGrayTextColor: rgba(51, 51, 51, 1.0);
+    --selectedUTubColor: rgba(244, 94, 97, 1.0);
+    --removeMemberColor: rgba(170, 65, 67, 1.0);
 
     --cardBackgroundColor: rgba(40, 47, 47, 1.0);
     --cardBackgroundColorHover: rgba(40, 47, 47, 0.8);
