--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -3,79 +3,7 @@
 <html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% block scripts_for_login %}
-    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
-    <meta http-equiv="refresh" content="{{ CONSTANTS.CONFIG.CSRF_EXPIRATION_SECONDS }}">
-    <meta name="csrf-token" content="{{ csrf_token() }}">
-    {% endif %}
-    {% endblock %}
-
-
-    {% if config["USE_LOCAL_JS_BUNDLES"] %}
-    <!-- Use local JS and CSS bundles -->
-    <!-- JS -->
-
-    <!-- jQuery - v3.7.1 -->
-    <script src="/static/scripts/jquery-3.7.1.min.js"></script>
-
-    <!-- Bootstrap bundle with popper - v5.2.3 -->
-    <script src="/static/scripts/bootstrap.bundle.min.js"></script>
-
-    <!-- CSS -->
-
-    <!-- Bootstrap CSS - v5.2.3 -->
-    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
-
-    <!-- Font -->
-    <link rel="stylesheet" href="/static/styles/font-awesome.min.css">
-
-    {% else %}
-    <!-- Use CDNs for JS and CSS bundles -->
-    <!-- JS -->
-
-    <!-- jQuery - v3.7.1 -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap bundle with popper - v5.2.3 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-
-    <!-- CSS -->
-
-    <!-- Bootstrap CSS - v5.2.3 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-
-
-    {% endif %}
-
-    <!-- Custom CSS adjustments -->
-    <link rel="stylesheet" href="/static/styles/app.css">
-
-    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
-    <link rel="stylesheet" href="/static/styles/home.css">
-    {% else %}
-    <link rel="stylesheet" href="/static/styles/splash.css">
-    {% endif %}
-
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicon/site.webmanifest">
-
-    <title>URLS4IRL</title>
+    {% include 'head.html' %}
 </head>
 
 <body class="vh-100">
@@ -84,7 +12,7 @@
 
     <!-- Navigation Bar -->
     {% include 'components/navbar.html' %}
-    <!-- Navigation Bar -->
+    <!-- End Navigation Bar -->
 
     {% block modal_extender %}
     <!-- Modal -->
