Frontend add changed to create

--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -22,17 +22,17 @@
 							<fieldset class="form-group">
 								<div class="text-input-container sixtyfive-width">
 									<div class="text-input-inner-container">
-										<input class="text-input add" type="text" id="urlTitle" name="urlTitle" maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}} required>
+										<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle" maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}} required>
 										<label class="text-input-label" for="urlTitle">URL Title</label>
 									</div>
-									<span class="text-input-error-message add" id="urlTitle-error"></span>
+									<span class="text-input-error-message" id="urlTitleCreate-error"></span>
 								</div>
 								<div class="text-input-container sixtyfive-width">
 									<div class="text-input-inner-container">
-										<input class="text-input add" type="text" id="urlString" name="urlString" maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}} minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} required>
+										<input class="text-input" type="text" id="urlStringCreate" name="urlString" maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}} minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} required>
 										<label class="text-input-label" for="urlString">URL</label>
 									</div>
-									<span class="text-input-error-message add" id="urlString-error"></span>
+									<span class="text-input-error-message" id="urlStringCreate-error"></span>
 								</div>
 
 								<!--
